@@ -9,6 +9,7 @@ import uk.gov.di.authentication.shared.entity.ErrorResponse;
 import uk.gov.di.authentication.shared.entity.PriorityIdentifier;
 import uk.gov.di.authentication.shared.entity.mfa.MFAMethod;
 import uk.gov.di.authentication.shared.entity.mfa.MFAMethodType;
+import uk.gov.di.authentication.shared.helpers.ClientSubjectHelper;
 import uk.gov.di.authentication.shared.services.ConfigurationService;
 import uk.gov.di.authentication.sharedtest.basetest.ApiGatewayHandlerIntegrationTest;
 import uk.gov.di.authentication.sharedtest.extensions.UserStoreExtension;
@@ -29,12 +30,16 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
     private static final String EMAIL = "joe.bloggs+3@digital.cabinet-office.gov.uk";
     private static final String PASSWORD = "password-1";
     private static final String PHONE_NUMBER = "+447700900000";
+    private static final String INTERNAL_SECTOR_HOST = "test.account.gov.uk";
+    private static String testInternalSubject;
+    private static String publicSubjectId;
 
     @RegisterExtension
     private static UserStoreExtension userStoreExtension = new UserStoreExtension();
 
     @BeforeEach
     void setUp() {
+        publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
         ConfigurationService mfaMethodEnabledConfigurationService =
                 new ConfigurationService() {
                     @Override
@@ -43,11 +48,16 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                     }
                 };
         handler = new MFAMethodsRetrieveHandler(mfaMethodEnabledConfigurationService);
+        byte[] salt = userStore.addSalt(EMAIL);
+        testInternalSubject =
+                ClientSubjectHelper.calculatePairwiseIdentifier(
+                        userStore.getUserProfileFromEmail(EMAIL).get().getSubjectID(),
+                        INTERNAL_SECTOR_HOST,
+                        salt);
     }
 
     @Test
     void shouldReturn200WithSmsMethodWhenUserExists() {
-        var publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
         userStoreExtension.addVerifiedPhoneNumber(EMAIL, PHONE_NUMBER);
 
         var response =
@@ -56,7 +66,7 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(200, response.getStatusCode());
         var expectedResponse =
@@ -79,7 +89,6 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
 
     @Test
     void shouldReturn200WithAuthAppMethodWhenUserExists() {
-        var publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
         userStoreExtension.addMfaMethod(
                 EMAIL, MFAMethodType.AUTH_APP, true, true, "some-credential");
 
@@ -89,7 +98,7 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(200, response.getStatusCode());
         var expectedResponse =
@@ -112,7 +121,6 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
 
     @Test
     void shouldReturn200WithMultipleMethodsWhenMigratedUserExists() {
-        var publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
         userStoreExtension.setMfaMethodsMigrated(EMAIL, true);
 
         var authAppIdentifier = "14895398-33e5-41f0-b059-811b07df348d";
@@ -136,7 +144,7 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(200, response.getStatusCode());
         var expectedResponse =
@@ -168,16 +176,30 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
 
     @Test
     void shouldReturn404WhenUserDoesNotExist() {
-        var publicSubjectId = "userDoesNotExist";
+        var invalidPublicSubjectId = "userDoesNotExist";
+        var response =
+                makeRequest(
+                        Optional.empty(),
+                        Collections.emptyMap(),
+                        Collections.emptyMap(),
+                        Map.of("publicSubjectId", invalidPublicSubjectId),
+                        Map.of("principalId", testInternalSubject));
+
+        assertEquals(404, response.getStatusCode());
+        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1056));
+    }
+
+    @Test
+    void shouldReturn404WhenPrincipalIsInvalid() {
         var response =
                 makeRequest(
                         Optional.empty(),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", "invalid-principal"));
 
         assertEquals(404, response.getStatusCode());
-        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1056));
+        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1078));
     }
 }
